--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-LMS_API_KEY=your_canvas_api_key
-LMS_BASE_URL=https://canvas.instructure.com/api/v1
+MOODLE_TOKEN=your_moodle_token_here
+MOODLE_URL=https://lms.nust.edu.pk/webservice/rest/server.php
 WHATSAPP_ALLOWED_NUMBER=+1234567890
-LMS_COURSE_ID=12345
 TWILIO_ACCOUNT_SID=your_twilio_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
